2009-10-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#124398 - Whole application should be closed with 'End
	current task', not just topmost window

	* matchbox/core/mb-wm-client.c (mb_wm_client_shutdown): Simplify and
	check some NULLs just in case.
	* matchbox/core/mb-wm-root-window.c
	(mb_wm_root_window_handle_message): "No more Mr. Nice Guy": kill
	clients on 'End current task' message.

2009-10-08  Gordon Williams <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-window-manager.h: Just added some extra comments to
	  make it obvious that matchbox signals can't be sequentially numbered.

2009-10-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#141614 Unnecessary rotations on image viewer if phone application
		  open in switcher

	* matchbox/core/mb-wm-client-window.c (mb_wm_activate_client_real):
	  Do stack animation actors even if they are not focused.
	  It is let up to the community to find out why it wasn't
	  a problem earlier or why it wasn't noticable.

2009-10-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.71

2009-09-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	  (mb_wm_client_window_sync_properties):
	  Don't leak COOKIE_WIN_NET_STATE, COOKIE_WIN_TYPE,
	  COOKIE_WIN_HILDON_TYPE, COOKIE_WIN_GEOM either.

2009-09-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.70

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Make sure we don't call XFree
	with a NULL argument.

2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Speed up building.

	* debian/rules:
	  autoreconf only if ./configure doesn't exist, not every time
	  debian/rules runs.

2009-09-18  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Avoid leaking memory when
	reading window names. Avoid leaking memory in xas.c
	when we use goto to bail out.

	Release 0.2.69
