@@ -755,7 +755,8 @@ mb_wm_client_base_display_sync (MBWindowManagerClient *client)
 
   if (mb_wm_client_needs_decor_sync (client))
     {
-      unsigned int area[4];
+      MBGeometry area;
+
       /*
        * First, we set the base shape mask, if needed, so that individual
        * decors can add themselves to it.
@@ -776,15 +777,11 @@ mb_wm_client_base_display_sync (MBWindowManagerClient *client)
 	}
 #endif
 
-      area[0] = client->window->geometry.x - client->frame_geometry.x;
-      area[1] = client->window->geometry.y - client->frame_geometry.y;
-      area[2] = client->window->geometry.width;
-      area[3] = client->window->geometry.height;
-
-      XChangeProperty(wm->xdpy, wm->root_win->xwindow,  
-		      wm->atoms[MBWM_ATOM_NET_WORKAREA], 
-		      XA_CARDINAL, 32, PropModeReplace, 
-		      (unsigned char*)area, 4);
+      /* This is used to tell gtk where to place its precious comboboxes. */
+      area = client->window->geometry;
+      area.x -= client->frame_geometry.x;
+      area.y -= client->frame_geometry.y;
+      mb_wm_update_workarea (wm, &area);
 
 #if 0
       /*
